# passview-chatbot-poc

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/passview_chatbot_poc/: pdf-upload-rag-chat.py  qa-rag.py
