[project]
name = "passview-chatbot-poc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "jjangga0214", email = "bnbcmindnpass@gmail.com" }]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "Copyright" }

[tool.pdm]
distribution = false
